# ic_psd_flow

./: .gitignore  AGENTS.md
.opencode/skills/aves-script-builder/: SKILL.md
.opencode/skills/chip-xml-builder/: SKILL.md
.opencode/skills/rebuild-library/: SKILL.md
.opencode/skills/simple-test-runner/: SKILL.md  runner.py
hw_bridge/: README.md  examples.py  pyproject.toml
hw_bridge/src/hw_bridge/: device_manager.py  factory.py  interfaces.py
hw_bridge/src/hw_bridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hw_bridge/src/hw_bridge/drivers/: __init__.py  ftdi_driver.py
hw_bridge/src/hw_bridge/utils/: __init__.py
ic_psd2/: func.md
ic_psd2/scripts/: chip_cli.py  skill_helper.py
ic_psd2/src/: aves_generator.py  aves_to_sv_tasks.py  chip_builder.py  generate_local_autoclass.py  mock_driver.py  mock_executor.py  siliconflow_ocr.py
ic_psd3/: PSD3_TODO.md  README.md  demo_unified_generator.py
ic_psd3/examples/: aves_class_usage.py  gsu1k1_config_example.py  gsu1k1_config_example.py.bak
ic_psd3/src/: __init__.py
ic_psd3/src/hw_bridge/: config_example.yaml  examples_device_manager.py  pyproject.toml
ic_psd3/src/lab_instruments/: LAB_INSTRUMENTS.md  __init__.py  config.yaml  instrument_manager.py
ic_psd3/src/psd_bridge/: README_UNIFIED_GENERATOR.md  auto_py_script.py  aves_converter.py  unified_generator.py
openclaw_skill/: scan_models.py
openclaw_skill/deepsearch_skill/: SKILL.md
openclaw_skill/litellm_manage/: SKILL.md  TEST.md  email.md
vpn_analog/: analog_vpn.md  vpn_setup_guide.md
(+13 files in other folders)
